--- a/src/layouts/certificates.html
+++ b/src/layouts/certificates.html
@@ -2,7 +2,7 @@
 <html lang="en" itemscope itemtype="https://schema.org/Thing">
     <head>
         <meta charset="utf-8">
-        <title>[%title%]</title>
+        <title>Документация</title>
         <meta name="description" content="[%description%]">
 
         <!-- schema.org (google plus) -->
