--- a/src/layouts/http-error.html
+++ b/src/layouts/http-error.html
@@ -55,6 +55,9 @@
             </div>
         <![endif]-->
 
+        <header class="header">
+
+        </header>
         <div class="http-error container">
             <h1 class="http-error__code">
                 404
@@ -63,7 +66,9 @@
                 Такой страницы не существует
             </div>
         </div>
+        <footer class="footer">
 
+        </footer>
 
         <script src="../vendors/jquery/jquery-3.7.1.min.js"></script>
         <script src="../vendors/magnific-popup/jquery.magnific-popup.min.js"></script>
