--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -26,5 +26,7 @@
 
 @import url("_certificates.css");
 @import url("_http-error.css");
+@import url("_header.css");
+@import url("_footer.css");
 
 
