footer to bottom

--- a/src/layouts/certificates.html
+++ b/src/layouts/certificates.html
@@ -55,76 +55,91 @@
             </div>
         <![endif]-->
 
-        <div class="certificates container">
-            <h1 class="certificates__heading">
-                Документация
-            </h1>
-            <div class="certificates__list">
-                <a class="certificates__item" href="#">
-                    <img class="certificates__image"
-                         srcset="../temp/certificates-preview/certificate-preview-a@2x.jpg 2x"
-                         src="../temp/certificates-preview/certificate-preview-a@1x.jpg"
-                         width="546"
-                         height="772"
-                         alt=""
-                    >
-                </a>
-                <a class="certificates__item" href="#">
-                    <img class="certificates__image"
-                         srcset="../temp/certificates-preview/certificate-preview-b@2x.jpg 2x"
-                         src="../temp/certificates-preview/certificate-preview-b@1x.jpg"
-                         width="546"
-                         height="772"
-                         alt=""
-                    >
-                </a>
-                <a class="certificates__item" href="#">
-                    <img class="certificates__image"
-                         srcset="../temp/certificates-preview/certificate-preview-c@2x.jpg 2x"
-                         src="../temp/certificates-preview/certificate-preview-c@1x.jpg"
-                         width="546"
-                         height="772"
-                         alt=""
-                    >
-                </a>
-                <a class="certificates__item" href="#">
-                    <img class="certificates__image"
-                         srcset="../temp/certificates-preview/certificate-preview-d@2x.jpg 2x"
-                         src="../temp/certificates-preview/certificate-preview-d@1x.jpg"
-                         width="546"
-                         height="772"
-                         alt=""
-                    >
-                </a>
-                <a class="certificates__item" href="#">
-                    <img class="certificates__image"
-                         srcset="../temp/certificates-preview/certificate-preview-e@2x.jpg 2x"
-                         src="../temp/certificates-preview/certificate-preview-e@1x.jpg"
-                         width="546"
-                         height="772"
-                         alt=""
-                    >
-                </a>
-                <a class="certificates__item" href="#">
-                    <img class="certificates__image"
-                         srcset="../temp/certificates-preview/certificate-preview-f@2x.jpg 2x"
-                         src="../temp/certificates-preview/certificate-preview-f@1x.jpg"
-                         width="546"
-                         height="772"
-                         alt=""
-                    >
-                </a>
-                <a class="certificates__item" href="#">
-                    <img class="certificates__image"
-                         srcset="../temp/certificates-preview/certificate-preview-g@2x.jpg 2x"
-                         src="../temp/certificates-preview/certificate-preview-g@1x.jpg"
-                         width="546"
-                         height="772"
-                         alt=""
-                    >
-                </a>
+        <div class="page">
+            <div class="page__header">
+                <header class="header">
+
+                </header>
+            </div>
+            <div class="page__body">
+                <div class="certificates container">
+                    <h1 class="certificates__heading">
+                        Документация
+                    </h1>
+                    <div class="certificates__list">
+                        <a class="certificates__item" href="#">
+                            <img class="certificates__image"
+                                 srcset="../temp/certificates-preview/certificate-preview-a@2x.jpg 2x"
+                                 src="../temp/certificates-preview/certificate-preview-a@1x.jpg"
+                                 width="546"
+                                 height="772"
+                                 alt=""
+                            >
+                        </a>
+                        <a class="certificates__item" href="#">
+                            <img class="certificates__image"
+                                 srcset="../temp/certificates-preview/certificate-preview-b@2x.jpg 2x"
+                                 src="../temp/certificates-preview/certificate-preview-b@1x.jpg"
+                                 width="546"
+                                 height="772"
+                                 alt=""
+                            >
+                        </a>
+                        <a class="certificates__item" href="#">
+                            <img class="certificates__image"
+                                 srcset="../temp/certificates-preview/certificate-preview-c@2x.jpg 2x"
+                                 src="../temp/certificates-preview/certificate-preview-c@1x.jpg"
+                                 width="546"
+                                 height="772"
+                                 alt=""
+                            >
+                        </a>
+                        <a class="certificates__item" href="#">
+                            <img class="certificates__image"
+                                 srcset="../temp/certificates-preview/certificate-preview-d@2x.jpg 2x"
+                                 src="../temp/certificates-preview/certificate-preview-d@1x.jpg"
+                                 width="546"
+                                 height="772"
+                                 alt=""
+                            >
+                        </a>
+                        <a class="certificates__item" href="#">
+                            <img class="certificates__image"
+                                 srcset="../temp/certificates-preview/certificate-preview-e@2x.jpg 2x"
+                                 src="../temp/certificates-preview/certificate-preview-e@1x.jpg"
+                                 width="546"
+                                 height="772"
+                                 alt=""
+                            >
+                        </a>
+                        <a class="certificates__item" href="#">
+                            <img class="certificates__image"
+                                 srcset="../temp/certificates-preview/certificate-preview-f@2x.jpg 2x"
+                                 src="../temp/certificates-preview/certificate-preview-f@1x.jpg"
+                                 width="546"
+                                 height="772"
+                                 alt=""
+                            >
+                        </a>
+                        <a class="certificates__item" href="#">
+                            <img class="certificates__image"
+                                 srcset="../temp/certificates-preview/certificate-preview-g@2x.jpg 2x"
+                                 src="../temp/certificates-preview/certificate-preview-g@1x.jpg"
+                                 width="546"
+                                 height="772"
+                                 alt=""
+                            >
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="page__footer">
+                <footer class="footer">
+
+                </footer>
             </div>
         </div>
+
 
 
         <script src="../vendors/jquery/jquery-3.7.1.min.js"></script>
