--- a/src/layouts/http-error.html
+++ b/src/layouts/http-error.html
@@ -55,20 +55,28 @@
             </div>
         <![endif]-->
 
-        <header class="header">
+        <div class="page">
+            <div class="page__header">
+                <header class="header">
 
-        </header>
-        <div class="http-error container">
-            <h1 class="http-error__code">
-                404
-            </h1>
-            <div class="http-error__description">
-                Такой страницы не существует
+                </header>
+            </div>
+            <div class="page__body">
+                <div class="http-error container">
+                    <h1 class="http-error__code">
+                        404
+                    </h1>
+                    <div class="http-error__description">
+                        Такой страницы не существует
+                    </div>
+                </div>
+            </div>
+            <div class="page__footer">
+                <footer class="footer">
+
+                </footer>
             </div>
         </div>
-        <footer class="footer">
-
-        </footer>
 
         <script src="../vendors/jquery/jquery-3.7.1.min.js"></script>
         <script src="../vendors/magnific-popup/jquery.magnific-popup.min.js"></script>
