--- a/src/styles/_http-error.css
+++ b/src/styles/_http-error.css
@@ -1,4 +1,9 @@
 .http-error {
+    padding-top: var(--top-padding);
+    padding-bottom: var(--bottom-padding);
+    height: 100%;
+    display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
 }
