--- a/src/styles/_root.css
+++ b/src/styles/_root.css
@@ -3,7 +3,7 @@
     --body-font-size: 22px;
     --body-line-height: 28px;
     /*--ease-out-quint: cubic-bezier(0.22, 1, 0.36, 1);*/
-    /*--transition-hover: 100ms ease;*/
+    --transition-hover: 100ms ease;
     /*--transition-show: 1200ms var(--ease-out-quint);*/
     /*--image-fallback: #F3F5F4;*/
     --container-padding: 24px;
