--- a/src/layouts/contacts.html
+++ b/src/layouts/contacts.html
@@ -87,10 +87,10 @@
                                             <path d="M11.998.42C5.538.42.27 5.588.27 11.9c0 1.64.348 3.23 1.044 4.671C4.246 22.833 9.86 29.492 11.5 31.381c.1.15.299.199.497.199.2 0 .348-.1.497-.199 1.64-1.889 7.256-8.498 10.188-14.81a10.707 10.707 0 0 0 1.044-4.671C23.677 5.588 18.459.42 11.998.42Zm0 17.443c-3.33 0-6.063-2.683-6.063-5.963 0-3.28 2.734-5.964 6.063-5.964 3.38 0 6.063 2.684 6.063 5.964 0 3.28-2.733 5.963-6.063 5.963Z" clip-rule="evenodd"/>
                                         </svg>
                                         <div class="contacts__value">
-                                            ул. Бабушкина, д. 123 лит. ЕБ<br>
+                                            ул. Бабушкина, <span class="nobr">д. 123 лит. ЕБ</span><br>
                                             <br>
                                             РЕЖИМ РАБОТЫ<br>
-                                            Пн. – Пт.: с 9:00 до 18:00
+                                            Пн. – Пт.: <span class="nobr">с 9:00 до 18:00</span>
                                         </div>
                                     </div>
                                     <div class="contacts__channel">
@@ -130,10 +130,10 @@
                                             <path d="M11.998.42C5.538.42.27 5.588.27 11.9c0 1.64.348 3.23 1.044 4.671C4.246 22.833 9.86 29.492 11.5 31.381c.1.15.299.199.497.199.2 0 .348-.1.497-.199 1.64-1.889 7.256-8.498 10.188-14.81a10.707 10.707 0 0 0 1.044-4.671C23.677 5.588 18.459.42 11.998.42Zm0 17.443c-3.33 0-6.063-2.683-6.063-5.963 0-3.28 2.734-5.964 6.063-5.964 3.38 0 6.063 2.684 6.063 5.964 0 3.28-2.733 5.963-6.063 5.963Z" clip-rule="evenodd"/>
                                         </svg>
                                         <div class="contacts__value">
-                                            Ленинградская область, г. Кировск, ул. Железнодорожная, д. 2<br>
+                                            Ленинградская область, <span class="nobr">г. Кировск</span>, <span class="nobr">ул. Железнодорожная, д. 2</span><br>
                                             <br>
                                             РЕЖИМ РАБОТЫ<br>
-                                            Пн. – Пт.: с 8:00 до 17:00
+                                            Пн. – Пт.: <span class="nobr">с 8:00 до 17:00</span>
                                         </div>
                                     </div>
                                     <div class="contacts__channel">
