--- a/src/styles/_root.css
+++ b/src/styles/_root.css
@@ -32,5 +32,7 @@
         --header-height: 90px;
         --container-padding: 16px;
         --top-padding: 32px;
+        --body-font-size: 17px;
+        --body-line-height: 24px;
     }
 }
