--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -9,7 +9,7 @@
 @import url("_browser.css");
 @import url("_container.css");
 
-/*@import url("_nobr.css");*/
+@import url("_nobr.css");
 /*@import url("_hide-scrollbar.css");*/
 
 @import url("_link.css");
