--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -16,7 +16,7 @@
 /*@import url("_button.css");*/
 /*@import url("_input.css");*/
 /*@import url("_choice.css");*/
-/*@import url("_wysiwyg.css");*/
+@import url("_wysiwyg.css");
 /*@import url("_label.css");*/
 /*@import url("_helper.css");*/
 
@@ -31,5 +31,8 @@
 @import url("_page.css");
 @import url("_contacts.css");
 @import url("_map.css");
+@import url("_inner-container.css");
+@import url("_thumbnail.css");
+@import url("_project.css");
 
 
