--- a/src/layouts/projects-item.html
+++ b/src/layouts/projects-item.html
@@ -96,7 +96,7 @@
                         </div>
                     </div>
                     <div class="project__body container">
-                        <div class="project__content inner-container">
+                        <div class="project__wrap inner-container">
                             <div class="wysiwyg">
                                 <p>Мы проанализировали бизнес-процессы предприятия и автоматизировали процесс сбора и передачи данных.</p>
                                 <p>ООО «ДетроГаз» — предприятие, специализирующееся на производстве и поставке технических газов. Его газовые баллоны находятся в трех городах: Челябинске, Коркино и Копейске. Чтобы замерить уровень остатка газа в баллоне, сотрудник ООО «ДетроГаз» объезжает их, записывает в свой журнал показатели, после чего возвращается в главный офис. С помощью компьютера заносит данные в систему и, если нужно, передает заявку на пополнение. Операция повторяется каждый день.</p>
@@ -119,7 +119,7 @@
                             </div>
                         </div>
                         <div class="project__gallery">
-                            <div class="project__gallery-item">
+                            <div>
                                 <a class="thumbnail" href="#">
                                     <img class="thumbnail__image"
                                          srcset="../temp/projects-gallery/projects-gallery-a@2x.jpg 2x"
@@ -130,7 +130,7 @@
                                     >
                                 </a>
                             </div>
-                            <div class="project__gallery-item">
+                            <div>
                                 <a class="thumbnail" href="#">
                                     <img class="thumbnail__image"
                                          srcset="../temp/projects-gallery/projects-gallery-b@2x.jpg 2x"
@@ -141,7 +141,7 @@
                                     >
                                 </a>
                             </div>
-                            <div class="project__gallery-item">
+                            <div>
                                 <a class="thumbnail" href="#">
                                     <img class="thumbnail__image"
                                          srcset="../temp/projects-gallery/projects-gallery-c@2x.jpg 2x"
