--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -34,5 +34,6 @@
 @import url("_inner-container.css");
 @import url("_thumbnail.css");
 @import url("_project.css");
+@import url("_service.css");
 
 
