--- a/src/layouts/service-item.html
+++ b/src/layouts/service-item.html
@@ -2,7 +2,7 @@
 <html lang="ru" itemscope itemtype="https://schema.org/Thing">
     <head>
         <meta charset="utf-8">
-        <title>РОСТЕЛЕКОМ-Ростов-Эстакада</title>
+        <title>Дизельные электростанции-ДЭС</title>
         <meta name="description" content="[%description%]">
 
         <!-- schema.org (google plus) -->
@@ -77,10 +77,10 @@
                         <div class="service__top-content inner-container">
                             <div class="wysiwyg">
                                 <p>Блок-модуль имеет конструкцию, предназначенную для размещения в нем автономных источников электроснабжения с использованием дизельных генераторов.</p>
-                                <p>Контейнеры ДЭС применяют в качестве аварийного, резервного, вспомогательного  или основного источника электроэнергии на предприятиях, в строительстве,  в административных и медицинских учреждениях, в аэропортах, гостиницах и т.п.  и могут работать как в автономном режиме, так и параллельно с централизованными системами электроснабжения.</p>
-                                <p>Контейнер ДЭС может быть выполнен из легких строительных конструкций  на основе жесткого металлического каркаса  или в антивандальном исполнении для работы в разных климатических условиях.  Модули могут быть масштабируемы и настроены для параллельной работы.</p>
-                                <p>Мы производим модули всех степеней автоматизации и диапазона мощностей,  от ведущих производителей как отечественного, так и зарубежного производства.</p>
-                                <p>Наша компания имеет возможность монтажа двух и более ДГУ в контейнере,  а также установки блок-контейнера на шасси-прицеп для применения в качестве передвижной «ДЭС».</p>
+                                <p>Контейнеры ДЭС применяют в качестве аварийного, резервного, вспомогательного или основного источника электроэнергии на предприятиях, в строительстве, в административных и медицинских учреждениях, в аэропортах, гостиницах и т.п. и могут работать как в автономном режиме, так и параллельно с централизованными системами электроснабжения.</p>
+                                <p>Контейнер ДЭС может быть выполнен из легких строительных конструкций на основе жесткого металлического каркаса или в антивандальном исполнении для работы в разных климатических условиях. Модули могут быть масштабируемы и настроены для параллельной работы.</p>
+                                <p>Мы производим модули всех степеней автоматизации и диапазона мощностей, от ведущих производителей как отечественного, так и зарубежного производства.</p>
+                                <p>Наша компания имеет возможность монтажа двух и более ДГУ в контейнере, а также установки блок-контейнера на шасси-прицеп для применения в качестве передвижной «ДЭС».</p>
                             </div>
                         </div>
                         <div class="service__gallery">
