--- a/src/layouts/service-item.html
+++ b/src/layouts/service-item.html
@@ -84,38 +84,40 @@
                             </div>
                         </div>
                         <div class="service__gallery">
-                            <div>
-                                <a class="thumbnail" href="#">
-                                    <img class="thumbnail__image"
-                                         srcset="../temp/service-gallery/service-gallery-a@2x.jpg 2x"
-                                         src="../temp/service-gallery/service-gallery-a@1x.jpg"
-                                         width="546"
-                                         height="458"
-                                         alt=""
-                                    >
-                                </a>
-                            </div>
-                            <div>
-                                <a class="thumbnail" href="#">
-                                    <img class="thumbnail__image"
-                                         srcset="../temp/service-gallery/service-gallery-b@2x.jpg 2x"
-                                         src="../temp/service-gallery/service-gallery-b@1x.jpg"
-                                         width="546"
-                                         height="458"
-                                         alt=""
-                                    >
-                                </a>
-                            </div>
-                            <div>
-                                <a class="thumbnail" href="#">
-                                    <img class="thumbnail__image"
-                                         srcset="../temp/service-gallery/service-gallery-c@2x.jpg 2x"
-                                         src="../temp/service-gallery/service-gallery-c@1x.jpg"
-                                         width="546"
-                                         height="458"
-                                         alt=""
-                                    >
-                                </a>
+                            <div class="gallery">
+                                <div class="gallery__item">
+                                    <a class="thumbnail" href="#">
+                                        <img class="thumbnail__image"
+                                             srcset="../temp/service-gallery/service-gallery-a@2x.jpg 2x"
+                                             src="../temp/service-gallery/service-gallery-a@1x.jpg"
+                                             width="546"
+                                             height="458"
+                                             alt=""
+                                        >
+                                    </a>
+                                </div>
+                                <div class="gallery__item">
+                                    <a class="thumbnail" href="#">
+                                        <img class="thumbnail__image"
+                                             srcset="../temp/service-gallery/service-gallery-b@2x.jpg 2x"
+                                             src="../temp/service-gallery/service-gallery-b@1x.jpg"
+                                             width="546"
+                                             height="458"
+                                             alt=""
+                                        >
+                                    </a>
+                                </div>
+                                <div class="gallery__item">
+                                    <a class="thumbnail" href="#">
+                                        <img class="thumbnail__image"
+                                             srcset="../temp/service-gallery/service-gallery-c@2x.jpg 2x"
+                                             src="../temp/service-gallery/service-gallery-c@1x.jpg"
+                                             width="546"
+                                             height="458"
+                                             alt=""
+                                        >
+                                    </a>
+                                </div>
                             </div>
                         </div>
                         <div class="service__bottom-content inner-container">
