--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -36,5 +36,8 @@
 @import url("_project.css");
 @import url("_service.css");
 @import url("_gallery.css");
+@import url("_highlights.css");
+@import url("_portfolio.css");
+@import url("_geo.css");
 
 
