--- a/src/layouts/projects.html
+++ b/src/layouts/projects.html
@@ -67,7 +67,73 @@
                         Проекты
                     </h1>
                     <div class="portfolio__list">
-                        list
+                        <div class="portfolio__list-wrap container">
+                            <div class="swiper">
+                                <div class="swiper-wrapper">
+                                    <div class="swiper-slide">
+                                        <a class="work" href="#">
+                                            <div class="work__preview">
+                                                <img class="work__image"
+                                                     srcset="../temp/works/work-a@2x.jpg 2x"
+                                                     src="../temp/works/work-a@1x.jpg"
+                                                     width="366"
+                                                     height="422"
+                                                     alt=""
+                                                >
+                                            </div>
+                                            <div class="work__label">
+                                                РОСТЕЛЕКОМ-Ростов-Эстакада
+                                            </div>
+                                            <div class="work__details">
+                                                Подробнее
+                                            </div>
+                                        </a>
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <a class="work" href="#">
+                                            <div class="work__preview">
+                                                <img class="work__image"
+                                                     srcset="../temp/works/work-b@2x.jpg 2x"
+                                                     src="../temp/works/work-b@1x.jpg"
+                                                     width="366"
+                                                     height="422"
+                                                     alt=""
+                                                >
+                                            </div>
+                                            <div class="work__label">
+                                                10+ лет сотрудничества с АО «ТРАНСМАШХОЛДИНГ»: энергоснабжение и электрификация железных путей
+                                            </div>
+                                            <div class="work__details">
+                                                Подробнее
+                                            </div>
+                                        </a>
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <a class="work" href="#">
+                                            <div class="work__preview">
+                                                <img class="work__image"
+                                                     srcset="../temp/works/work-c@2x.jpg 2x"
+                                                     src="../temp/works/work-c@1x.jpg"
+                                                     width="366"
+                                                     height="422"
+                                                     alt=""
+                                                >
+                                            </div>
+                                            <div class="work__label">
+                                                Испытательная станция
+                                            </div>
+                                            <div class="work__details">
+                                                Подробнее
+                                            </div>
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="carousel__pagination">
+
+                                </div>
+                            </div>
+
+                        </div>
                     </div>
                     <h2 class="portfolio__map-heading">
                         Локации наших работ
@@ -125,9 +191,9 @@
         <script src="../vendors/inputmask/jquery.inputmask.min.js"></script>
         <script src="../vendors/inputmask.phone/inputmask.phone.extensions.min.js"></script>
         <script src="../vendors/inputmask.phone/phone-codes/phone-ru.min.js"></script>
-        <script src="../scripts/_mfp.js"></script>
-        <script src="../scripts/_input.js"></script>
-        <script src="../scripts/_inputmask.js"></script>
+
+        <script src="../vendors/swiper/swiper-bundle.min.js"></script>
+        <script src="../scripts/scripts.js"></script>
 
     </body>
 </html>
