--- a/src/styles/_portfolio.css
+++ b/src/styles/_portfolio.css
@@ -8,8 +8,12 @@
     }
 
     .portfolio__list {
-
+        /*background-color: #0D25FF;*/
     }
+        .portfolio__list-wrap {
+            padding-top: 50px;
+            padding-bottom: 35px;
+        }
 
     .portfolio__map-heading {
 
@@ -18,3 +22,33 @@
     .portfolio__map {
         order: -1;
     }
+
+
+
+@media (width < 740px) {
+
+    .portfolio {
+        /*padding-top: 3px;*/
+        /*display: flex;*/
+        /*flex-direction: column;*/
+    }
+        .portfolio__heading {
+
+        }
+
+        .portfolio__list {
+            background-color: #0D25FF;
+        }
+            .portfolio__list-wrap {
+                /*padding-top: 50px;*/
+                /*padding-bottom: 35px;*/
+            }
+
+        .portfolio__map-heading {
+
+        }
+
+        .portfolio__map {
+            /*order: -1;*/
+        }
+}
