--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,6 +1,7 @@
 @import url("../styles/_fonts.css");
 @import url("../vendors/normalize/normalize.css");
 @import url("../vendors/magnific-popup/magnific-popup.css");
+@import url("../vendors/swiper/swiper-bundle.min.css");
 @import url("_box-sizing.css");
 @import url("_visuallyhidden.css");
 @import url("_root.css");
@@ -39,5 +40,6 @@
 @import url("_highlights.css");
 @import url("_portfolio.css");
 @import url("_geo.css");
+@import url("_work.css");
 
 
