--- a/src/layouts/projects.html
+++ b/src/layouts/projects.html
@@ -68,71 +68,74 @@
                     </h1>
                     <div class="portfolio__list">
                         <div class="portfolio__list-wrap container">
-                            <div class="swiper">
-                                <div class="swiper-wrapper">
-                                    <div class="swiper-slide">
-                                        <a class="work" href="#">
-                                            <div class="work__preview">
-                                                <img class="work__image"
-                                                     srcset="../temp/works/work-a@2x.jpg 2x"
-                                                     src="../temp/works/work-a@1x.jpg"
-                                                     width="366"
-                                                     height="422"
-                                                     alt=""
-                                                >
+                            <div class="carousel  carousel--js-init-portfolio  carousel--css-skin-portfolio">
+                                <div class="carousel__widget">
+                                    <div class="swiper">
+                                        <div class="swiper-wrapper">
+                                            <div class="swiper-slide">
+                                                <a class="work" href="#">
+                                                    <div class="work__preview">
+                                                        <img class="work__image"
+                                                             srcset="../temp/works/work-a@2x.jpg 2x"
+                                                             src="../temp/works/work-a@1x.jpg"
+                                                             width="366"
+                                                             height="422"
+                                                             alt=""
+                                                        >
+                                                    </div>
+                                                    <div class="work__label">
+                                                        РОСТЕЛЕКОМ-Ростов-Эстакада
+                                                    </div>
+                                                    <div class="work__details">
+                                                        Подробнее
+                                                    </div>
+                                                </a>
                                             </div>
-                                            <div class="work__label">
-                                                РОСТЕЛЕКОМ-Ростов-Эстакада
+                                            <div class="swiper-slide">
+                                                <a class="work" href="#">
+                                                    <div class="work__preview">
+                                                        <img class="work__image"
+                                                             srcset="../temp/works/work-b@2x.jpg 2x"
+                                                             src="../temp/works/work-b@1x.jpg"
+                                                             width="366"
+                                                             height="422"
+                                                             alt=""
+                                                        >
+                                                    </div>
+                                                    <div class="work__label">
+                                                        10+ лет сотрудничества с АО «ТРАНСМАШХОЛДИНГ»: энергоснабжение и электрификация железных путей
+                                                    </div>
+                                                    <div class="work__details">
+                                                        Подробнее
+                                                    </div>
+                                                </a>
                                             </div>
-                                            <div class="work__details">
-                                                Подробнее
+                                            <div class="swiper-slide">
+                                                <a class="work" href="#">
+                                                    <div class="work__preview">
+                                                        <img class="work__image"
+                                                             srcset="../temp/works/work-c@2x.jpg 2x"
+                                                             src="../temp/works/work-c@1x.jpg"
+                                                             width="366"
+                                                             height="422"
+                                                             alt=""
+                                                        >
+                                                    </div>
+                                                    <div class="work__label">
+                                                        Испытательная станция
+                                                    </div>
+                                                    <div class="work__details">
+                                                        Подробнее
+                                                    </div>
+                                                </a>
                                             </div>
-                                        </a>
-                                    </div>
-                                    <div class="swiper-slide">
-                                        <a class="work" href="#">
-                                            <div class="work__preview">
-                                                <img class="work__image"
-                                                     srcset="../temp/works/work-b@2x.jpg 2x"
-                                                     src="../temp/works/work-b@1x.jpg"
-                                                     width="366"
-                                                     height="422"
-                                                     alt=""
-                                                >
-                                            </div>
-                                            <div class="work__label">
-                                                10+ лет сотрудничества с АО «ТРАНСМАШХОЛДИНГ»: энергоснабжение и электрификация железных путей
-                                            </div>
-                                            <div class="work__details">
-                                                Подробнее
-                                            </div>
-                                        </a>
-                                    </div>
-                                    <div class="swiper-slide">
-                                        <a class="work" href="#">
-                                            <div class="work__preview">
-                                                <img class="work__image"
-                                                     srcset="../temp/works/work-c@2x.jpg 2x"
-                                                     src="../temp/works/work-c@1x.jpg"
-                                                     width="366"
-                                                     height="422"
-                                                     alt=""
-                                                >
-                                            </div>
-                                            <div class="work__label">
-                                                Испытательная станция
-                                            </div>
-                                            <div class="work__details">
-                                                Подробнее
-                                            </div>
-                                        </a>
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="carousel__pagination">
 
                                 </div>
                             </div>
-
                         </div>
                     </div>
                     <h2 class="portfolio__map-heading">
