--- a/src/layouts/projects.html
+++ b/src/layouts/projects.html
@@ -129,6 +129,196 @@
                                                     </div>
                                                 </a>
                                             </div>
+                                            <div class="swiper-slide">
+                                                <a class="work" href="#">
+                                                    <div class="work__preview">
+                                                        <img class="work__image"
+                                                             srcset="../temp/works/work-d@2x.jpg 2x"
+                                                             src="../temp/works/work-d@1x.jpg"
+                                                             width="366"
+                                                             height="422"
+                                                             alt=""
+                                                        >
+                                                    </div>
+                                                    <div class="work__label">
+                                                        СММ-Электро
+                                                    </div>
+                                                    <div class="work__details">
+                                                        Подробнее
+                                                    </div>
+                                                </a>
+                                            </div>
+                                            <div class="swiper-slide">
+                                                <a class="work" href="#">
+                                                    <div class="work__preview">
+                                                        <img class="work__image"
+                                                             srcset="../temp/works/work-e@2x.jpg 2x"
+                                                             src="../temp/works/work-e@1x.jpg"
+                                                             width="366"
+                                                             height="422"
+                                                             alt=""
+                                                        >
+                                                    </div>
+                                                    <div class="work__label">
+                                                        Станция водоподготовки для Птицефабрики «Северная»
+                                                    </div>
+                                                    <div class="work__details">
+                                                        Подробнее
+                                                    </div>
+                                                </a>
+                                            </div>
+                                            <div class="swiper-slide">
+                                                <a class="work" href="#">
+                                                    <div class="work__preview">
+                                                        <img class="work__image"
+                                                             srcset="../temp/works/work-f@2x.jpg 2x"
+                                                             src="../temp/works/work-f@1x.jpg"
+                                                             width="366"
+                                                             height="422"
+                                                             alt=""
+                                                        >
+                                                    </div>
+                                                    <div class="work__label">
+                                                        «Зелёная» электроэнергия и антенно-мачтовые сооружения для ФСБ
+                                                    </div>
+                                                    <div class="work__details">
+                                                        Подробнее
+                                                    </div>
+                                                </a>
+                                            </div>
+                                            <div class="swiper-slide">
+                                                <a class="work" href="#">
+                                                    <div class="work__preview">
+                                                        <img class="work__image"
+                                                             srcset="../temp/works/work-g@2x.jpg 2x"
+                                                             src="../temp/works/work-g@1x.jpg"
+                                                             width="366"
+                                                             height="422"
+                                                             alt=""
+                                                        >
+                                                    </div>
+                                                    <div class="work__label">
+                                                        РОСТЕЛЕКОМ-Ростов-Эстакада
+                                                    </div>
+                                                    <div class="work__details">
+                                                        Подробнее
+                                                    </div>
+                                                </a>
+                                            </div>
+                                            <div class="swiper-slide">
+                                                <a class="work" href="#">
+                                                    <div class="work__preview">
+                                                        <img class="work__image"
+                                                             srcset="../temp/works/work-h@2x.jpg 2x"
+                                                             src="../temp/works/work-h@1x.jpg"
+                                                             width="366"
+                                                             height="422"
+                                                             alt=""
+                                                        >
+                                                    </div>
+                                                    <div class="work__label">
+                                                        10+ лет сотрудничества с АО «ТРАНСМАШХОЛДИНГ»: энергоснабжение и электрификация железных путей
+                                                    </div>
+                                                    <div class="work__details">
+                                                        Подробнее
+                                                    </div>
+                                                </a>
+                                            </div>
+                                            <div class="swiper-slide">
+                                                <a class="work" href="#">
+                                                    <div class="work__preview">
+                                                        <img class="work__image"
+                                                             srcset="../temp/works/work-i@2x.jpg 2x"
+                                                             src="../temp/works/work-i@1x.jpg"
+                                                             width="366"
+                                                             height="422"
+                                                             alt=""
+                                                        >
+                                                    </div>
+                                                    <div class="work__label">
+                                                        Испытательная станция
+                                                    </div>
+                                                    <div class="work__details">
+                                                        Подробнее
+                                                    </div>
+                                                </a>
+                                            </div>
+                                            <div class="swiper-slide">
+                                                <a class="work" href="#">
+                                                    <div class="work__preview">
+                                                        <img class="work__image"
+                                                             srcset="../temp/works/work-j@2x.jpg 2x"
+                                                             src="../temp/works/work-j@1x.jpg"
+                                                             width="366"
+                                                             height="422"
+                                                             alt=""
+                                                        >
+                                                    </div>
+                                                    <div class="work__label">
+                                                        СММ-Электро
+                                                    </div>
+                                                    <div class="work__details">
+                                                        Подробнее
+                                                    </div>
+                                                </a>
+                                            </div>
+                                            <div class="swiper-slide">
+                                                <a class="work" href="#">
+                                                    <div class="work__preview">
+                                                        <img class="work__image"
+                                                             srcset="../temp/works/work-k@2x.jpg 2x"
+                                                             src="../temp/works/work-k@1x.jpg"
+                                                             width="366"
+                                                             height="422"
+                                                             alt=""
+                                                        >
+                                                    </div>
+                                                    <div class="work__label">
+                                                        Станция водоподготовки для Птицефабрики «Северная»
+                                                    </div>
+                                                    <div class="work__details">
+                                                        Подробнее
+                                                    </div>
+                                                </a>
+                                            </div>
+                                            <div class="swiper-slide">
+                                                <a class="work" href="#">
+                                                    <div class="work__preview">
+                                                        <img class="work__image"
+                                                             srcset="../temp/works/work-l@2x.jpg 2x"
+                                                             src="../temp/works/work-l@1x.jpg"
+                                                             width="366"
+                                                             height="422"
+                                                             alt=""
+                                                        >
+                                                    </div>
+                                                    <div class="work__label">
+                                                        «Зелёная» электроэнергия и антенно-мачтовые сооружения для ФСБ
+                                                    </div>
+                                                    <div class="work__details">
+                                                        Подробнее
+                                                    </div>
+                                                </a>
+                                            </div>
+                                            <div class="swiper-slide">
+                                                <a class="work" href="#">
+                                                    <div class="work__preview">
+                                                        <img class="work__image"
+                                                             srcset="../temp/works/work-m@2x.jpg 2x"
+                                                             src="../temp/works/work-m@1x.jpg"
+                                                             width="366"
+                                                             height="422"
+                                                             alt=""
+                                                        >
+                                                    </div>
+                                                    <div class="work__label">
+                                                        РОСТЕЛЕКОМ-Ростов-Эстакада
+                                                    </div>
+                                                    <div class="work__details">
+                                                        Подробнее
+                                                    </div>
+                                                </a>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
